--- a/css/styles.scss
+++ b/css/styles.scss
@@ -32,10 +32,15 @@ p {
 }
 
 .OverInfoContainer{
-	background-color: grey;
+	background-color: lightblue;
+	padding: 3px;
 }
 
 .beskrivelse {
-	background-color: blue;
-
+	overflow: hidden;
+	text-overflow: ellipsis;
+	display: -webkit-box;
+	-webkit-line-clamp: 3;
+	line-clamp: 2;
+	-webkit-box-orient: vertical;
 }
